test/files/neg/t633.scala
object Test
{
        def t(a : ListBuffer[String]) = {
                Console.println(a.length)
        }

        def main(argv : Array[String]) = t(null)
}
