test/files/neg/t633.check
t633.scala:3: error: not found: type ListBuffer
        def t(a : ListBuffer[String]) = {
                  ^
1 error
